# clash-nursery

./: clash_interactive  stack.yaml  yosys_estimate
delayed-extra/: delayed-extra.cabal
delayed-extra/src/Clash/: DelayedExtra.hs
hash-cores/: hash-cores.cabal
hash-cores/src/: Demo.hs
hash-cores/src/HashCores/: Sha256.hs  Utils.hs
hash-cores/test/HashCores/: Sha256Spec.hs
j1-simple/: j1-simple.cabal  notes.md
j1-simple/src/: J1.hs
j1-simple/src/J1/: Core.hs  Ops.hs  Top.hs  Types.hs
j1-simple/test/J1/: J1Spec.hs
