name:                hash-cores
version:             0.1.0.0
license:             BSD3
author:              Ben Blaxill
maintainer:          Ben Blaxill <ben.blaxill@gmail.com>
copyright:           2018
category:            Hardware
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HashCores.Sha256
                     , HashCores.Utils
                     , Demo
  build-depends:       base >= 4.7 && < 5
                     , ghc-typelits-extra
                     , ghc-typelits-natnormalise
                     , ghc-typelits-knownnat
                     , clash-prelude
                     , clash-ghc
                     , lens
                     , mtl
                     , template-haskell
                     , deepseq
                     , QuickCheck
                     , generic-arbitrary
                     , singletons                >= 1.0     && < 3.0
                     , delayed-extra
  default-language:    Haskell2010
  ghc-options:         -fplugin=GHC.TypeLits.Extra.Solver
                       -fplugin=GHC.TypeLits.Normalise
                       -fplugin=GHC.TypeLits.KnownNat.Solver

test-suite hashcores-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ghc-typelits-extra
                     , ghc-typelits-natnormalise
                     , ghc-typelits-knownnat
                     , hash-cores
                     , delayed-extra
                     , clash-prelude
                     , hspec
                     , QuickCheck
                     , lens
                     , deepseq
                     , cryptohash
                     , bytestring
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
                       -fplugin=GHC.TypeLits.Extra.Solver
                       -fplugin=GHC.TypeLits.Normalise
                       -fplugin=GHC.TypeLits.KnownNat.Solver
  default-language:    Haskell2010
  other-modules:       HashCores.Sha256Spec
